--- a/index.html
+++ b/index.html
@@ -86,8 +86,6 @@ input::placeholder, textarea::placeholder{color:#94a3b8}
       <div class="brand"><span class="brand-dot"></span> <span>Vazio</span></div>
       <nav class="menu">
         <a href="#sobre">Sobre</a>
-        <a href="#servicos">Serviços</a>
-        <a href="#contato" class="btn">Contato</a>
       </nav>
     </div>
   </header>
@@ -154,7 +152,7 @@ input::placeholder, textarea::placeholder{color:#94a3b8}
     </section>
 
     <br>
-
+<!-- 
     <section class="container" id="contato">
       <div class="two-col">
         <div>
@@ -169,7 +167,7 @@ input::placeholder, textarea::placeholder{color:#94a3b8}
         </div>
         <div class="card">
           <!-- Netlify Forms: basta publicar no Netlify -->
-          <form name="contato" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+          <!-- <form name="contato" method="POST" data-netlify="true" netlify-honeypot="bot-field">
             <input type="hidden" name="form-name" value="contato" />
             <p hidden>
               <label>Não preencha: <input name="bot-field" /></label>
@@ -191,7 +189,7 @@ input::placeholder, textarea::placeholder{color:#94a3b8}
           </form>
         </div>
       </div>
-    </section>
+    </section> -->
   </main>
 
   <footer class="footer">
